# AI-EMPLOYEE-SILVER-TIER-

./: .gitignore  CLAUDE.md  README.md  requirements.txt
src/watchers/whatsapp/: README.md  package-lock.json  package.json  pyproject.toml  stop_watcher.bat  stop_watcher.sh  whatsapp_watcher.js
src/watchers/whatsapp/.wwebjs_auth/session/: DevToolsActivePort  Last Browser  Local State
src/watchers/whatsapp/.wwebjs_auth/session/Crashpad/: metadata
src/watchers/whatsapp/.wwebjs_auth/session/Crashpad/reports/: a6907803-2b4f-4605-9c58-0c97f690994f.dmp
src/watchers/whatsapp/.wwebjs_auth/session/Default/: DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Web Data  passkey_enclave_state
src/watchers/whatsapp/.wwebjs_auth/session/Default/DawnGraphiteCache/: data_1  index
src/watchers/whatsapp/.wwebjs_auth/session/Default/DawnWebGPUCache/: data_1  index
src/watchers/whatsapp/.wwebjs_auth/session/Default/Extension Rules/: LOG
src/watchers/whatsapp/.wwebjs_auth/session/Default/Extension Scripts/: LOG
src/watchers/whatsapp/.wwebjs_auth/session/Default/Extension State/: LOG  LOG.old
src/watchers/whatsapp/.wwebjs_auth/session/Default/GCM Store/: LOG  LOG.old
src/watchers/whatsapp/.wwebjs_auth/session/Default/GPUCache/: data_1  index
src/watchers/whatsapp/.wwebjs_auth/session/GrShaderCache/: data_1  index
src/watchers/whatsapp/.wwebjs_auth/session/ShaderCache/: data_1  index
src/watchers/whatsapp/.wwebjs_auth/session/segmentation_platform/: ukm_db
src/watchers/whatsapp/.wwebjs_cache/: 2.3000.1033705336.html
(+205 files in other folders)
